<?xml version="1.0"?>
<package format="3">
  <name>arduino_plugin</name>
  <version>0.0.0</version>
  <description>Interface for Arduino Motor/Servo Driver</description>

  <maintainer email="loganwong.lw@gmail.com">Logan Wong</maintainer>

  <license>Apache-2.0</license>

  <author email="loganwong.lw@gmail.com">Logan Wong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>libserial-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
